<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chooseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444654">

    <TextView
        android:id="@+id/titleBar1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="#343541"
        android:fontFamily="monospace"
        android:gravity="center"
        android:maxLines="1"
        android:padding="10dp"
        android:text="@string/powertools"
        android:textColor="#CCCCCC"
        android:textStyle="bold"
        app:autoSizeMinTextSize="8sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/titleBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleBar2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="1dp"
        android:background="#343541"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/app_name_show"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeMinTextSize="10sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar1" />

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/explanationTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="monospace"
        android:padding="13dp"
        android:text="@string/welcome_message"
        android:textAlignment="inherit"
        android:textColor="#FFFFFF"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeMinTextSize="4sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/pinInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar2" />

    <v4lpt.vpt.f023.MYC.PinInputView
        android:id="@+id/pinInput"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.12"
        android:background="@drawable/edit_text_background"
        android:textIsSelectable="false"
        android:fontFamily="monospace"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPoems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#FF0000"
        android:fontFamily="monospace"
        android:gravity="center"
        android:padding="10dp"
        android:text="Poems"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="35sp"
        app:autoSizeMinTextSize="4sp"
        app:autoSizeTextType="uniform"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintVertical_bias="0"/>

    <Button
        android:id="@+id/btnSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Songs"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/btnPoems"/>

    <Button
        android:id="@+id/btnMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Music"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/btnSongs"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnImport"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:icon="@drawable/ic_add"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:iconTint="#FFFFFF"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#33FFFFFF" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnImportFile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:icon="@drawable/import_multiple_file"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="27dp"
        app:iconTint="#FFFFFF"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:cornerRadius="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnImport"
        app:rippleColor="#33FFFFFF" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBackupRestore"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:icon="@drawable/rounded_arrows_icon_bold_large"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="38dp"
        app:iconTint="#FFFFFF"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="9dp"
        app:cornerRadius="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnImportFile"
        app:rippleColor="#33FFFFFF" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/infoButton"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/infobutton_info"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="24dp"
        app:icon="@drawable/info"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="#33FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>